k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: client-pod
  template:
    metadata:
      labels:
        component: client-pod
    spec:
      containers:
        - name : client-pod
          image: ksspam/multi-client-up
          ports:
            - containerPort: 3000
