k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres-template
  template:
    metadata:
      labels:
        component: postgres-template
    spec:
      volumes:
        - name: postgres-storage
          persistentVolumeClaim: 
            claimName: persistent-volume-claim-1gb
      containers:
        - name: postgres-pod
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres-data
