k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: server-template
  template:
    metadata:
      labels:
        component: server-template
    spec:
      containers:
        - name: server-pod
          image: ksspam/multi-server-up
          ports:
            - containerPort: 5000
