k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: work-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component : worker-template
  template:
    metadata:
      labels:
        component: worker-template
    spec:
      containers:
        - name : worker-pod
          image: ksspam/multi-worker-up
