k8s/client-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: client-pod
  ports:
    - targetPort : 3000
      port: 3000
