k8s/server-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: server-template
  ports:
    - targetPort: 5000
      port: 5000
